<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Illusion Settings</string>
    <string name="title_generalui">General UI</string>
    <string name="title_status_settings">Status Extras</string>
    <string name="ok">OK</string>
    
    <string name="global_change_warning" product="default">This setting affects all users on this phone.</string>   
    <!-- Share to clipboard -->
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="title_clipboard_share">Copy to clipboard</string>

    <!-- Active Display -->
    <string name="active_display_settings">ActiveDisplay</string>
    <string name="ad_settings_title">Active display</string>
    <string name="ad_settings_summary">Change active display settings</string>
    <string name="ad_enable_title">Enable</string>
    <string name="ad_enable_summary_on">Active display enabled</string>
    <string name="ad_enable_summary_off">Active display disabled</string>
    <string name="ad_text_title">Notification text</string>
    <string name="ad_text_summary">Show the notification text around the ring.</string>
    <string name="ad_all_notifications_title">All notifications</string>
    <string name="ad_all_notifications_summary">Show all notifications including ongoing, non-clearable notifications.</string>
    <string name="ad_hide_low_priority_title">Hide low priority</string>
    <string name="ad_hide_low_priority_summary">Hide low priority notifications such as those from Google Now.</string>
    <string name="ad_pocket_mode_title">Pocket mode</string>
    <string name="ad_pocket_mode_summary">Show active display notifications when you take the device out of your pocket.</string>
    <string name="ad_redisplay_title">Redisplay notifications</string>
    <string name="ad_brightness_title">Notification brightness</string>
    <string name="ad_customizations_title">Customizations</string>
    <string name="ad_excluded_apps_title">Excluded applications</string>
    <string name="ad_excluded_apps_summary">Excluded applications will not show up in active display.</string>
    <string name="ad_show_date_title">Show date</string>
    <string name="ad_show_ampm_title">Show AM/PM</string>
    <string name="ad_sunlight_mode_title">Sunlight mode</string>
    <string name="ad_brightness_summary">Brightness level for displaying notifications when automatic brightness is not enabled.</string>
    <string name="ad_show_date_summary">Show the date above the clock</string>
    <string name="ad_show_ampm_summary">Show AM/PM indicator next to time when using 12hour format</string>
    <string name="ad_sunlight_mode_summary">Invert the colors when in areas with bright light such as direct sunlight.</string>
    <string name="ad_redisplay_never">Never</string>
    <string name="ad_redisplay_1m">1 minute</string>
    <string name="ad_redisplay_5m">5 minutes</string>
    <string name="ad_redisplay_15m">15 minutes</string>
    <string name="ad_redisplay_30m">30 minutes</string>
    <string name="ad_redisplay_1h">1 hour</string>
    <string name="ad_redisplay_2h">2 hours</string>
    <string name="ad_redisplay_5h">5 hours</string>
    <string name="ad_pocket_mode_off">Off</string>
    <string name="ad_pocket_mode_notifications">Notifications only</string>
    <string name="ad_pocket_mode_always">Always</string>

    <!-- Hardware keys -->
    <string name="button_settings">Button Settings</string>
    <string name="button_keys_title">Keys</string>
    <string name="keys_bindings_title">Key actions</string>
    <string name="button_keys_back_title" >Back key</string>
    <string name="button_keys_home_title" >Home key</string>
    <string name="button_keys_menu_title" >Menu key</string>
    <string name="button_keys_assist_title" >Search key</string>
    <string name="button_keys_appSwitch_title" >App switch key</string>
    <string name="keys_enable_custom_title">Custom actions</string>
    <string name="keys_back_press_title">Back key</string>
    <string name="keys_back_long_press_title">Back key (long press)</string>
    <string name="keys_home_press_title">Home key</string>
    <string name="keys_home_long_press_title">Home key (long press)</string>
    <string name="keys_home_double_tap_title">Home key (double tap)</string>
    <string name="keys_menu_press_title">Menu key</string>
    <string name="keys_menu_long_press_title">Menu key (long press)</string>
    <string name="keys_assist_press_title">Search key</string>
    <string name="keys_assist_long_press_title">Search key (long press)</string>
    <string name="keys_app_switch_press_title">App switch key</string>
    <string name="keys_app_switch_long_press_title">App switch key (long press)</string>
    <string name="keys_action_nothing">No action</string>
    <string name="keys_action_menu">Open/close menu</string>
    <string name="keys_action_app_switch">Recent apps switcher</string>
    <string name="keys_action_search">Search assistant</string>
    <string name="keys_action_voice_search">Voice search</string>
    <string name="keys_action_in_app_search">In-app search</string>
    <string name="keys_action_home">Home button</string>
    <string name="keys_action_back">Back button</string>
    <string name="keys_action_last_app">Switch to last app</string>
    <string name="keys_action_kill_app">Kill app</string>
    <string name="keys_action_normal">Normal press</string>
    <string name="keys_action_long">Long press</string>
    <string name="keys_action_double">Double tap</string>
    <string name="dialog_no_home_key_title">No home action</string>
    <string name="no_home_key">You have no button assigned to the \"Home\" action! This can make your device unusable!</string>

    <!-- Halo -->
    <string name="halo_settings_title">Halo</string>
    <string name="halo_behavior_title">Halo Behavior</string>
    <string name="halo_hide_title">Hide Halo after activity</string>
    <string name="halo_hide_summary">Halo will appear for incoming tasks and scroll out of sight after a while</string>
    <string name="halo_state_title">Halo policy</string>
    <string name="halo_state_summary">Enables black/white listing notifications</string>
    <string name="halo_state_black">Black list</string>
    <string name="halo_state_white">White list</string>
    <string name="halo_pause_title">Pause active app</string>
    <string name="halo_pause_summary">When opening an app with Halo the underlying app will get paused</string>
    <string name="halo_notification_msgbox_title">Enable message pop-up</string>
    <string name="halo_notification_msgbox_summary">Show message box for incoming notifications</string>
    <string name="halo_unlock_ping_title">Ping on unlock</string>
    <string name="halo_unlock_ping_summary">Halo will ping when device is unlocked if new notifications were received</string>

    <string name="halo_size_title">Halo size</string>
    <string name="halo_size_summary">Defines how big Halo is going to be</string>
    <string name="halo_size_miniscule">Miniscule</string>
    <string name="halo_size_small">Small</string>
    <string name="halo_size_default">Normal (default)</string>
    <string name="halo_size_large">Large</string>
    <string name="halo_size_gigantic">Gigantic</string>
    <string name="halo_size_monster">Monster</string>

    <string name="halo_notification_count_title">Notification count</string>
    <string name="halo_notification_count_summary">Display notification counts on Halo</string>
    <string name="halo_notification_count_none">None</string>
    <string name="halo_notification_count_total">Total</string>
    <string name="halo_notification_count_individual">Per app</string>
    <string name="halo_notification_count_both">Both</string>

    <!-- Network speed -->
    <string name="show_network_speed">Network speed indicator</string>
    <string name="show_network_speed_summary">Show network speed in statusbar</string>
</resources>

