<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >
    <header
      android:id="@+id/GeneralUI"
      android:fragment="org.illusion.settings.fragments.GeneralUI"
      android:title="@string/title_generalui"
      android:icon="@drawable/ic_settings_generalui" />
    <header
      android:id="@+id/ActiveDisplaySettings"
      android:fragment="org.illusion.settings.fragments.ActiveDisplaySettings"
      android:title="@string/active_display_settings"
      android:icon="@drawable/ic_settings_activedisplay" />
    <header
      android:id="@+id/ButtonSettings"
      android:fragment="org.illusion.settings.fragments.ButtonSettings"
      android:title="@string/button_settings"
      android:icon="@drawable/ic_settings_button" />
    <header
      android:id="@+id/halo_settings"
      android:fragment="org.illusion.settings.fragments.HaloSettings"
      android:icon="@drawable/ic_settings_halo"
      android:title="@string/halo_settings_title" />
    <header
      android:id="@+id/status_settings"
      android:fragment="org.illusion.settings.fragments.StatusSettings"
      android:icon="@drawable/ic_settings_status"
      android:title="@string/title_status_settings" />
</preference-headers>
